[package]
name = "chain"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.38"
data-encoding = "2.6.0"
serde = { version = "1.0.132", features = ["derive"] }
num-bigint = "0.4.6"
ring = "0.17.8"
sled = "0.34"
bs58 = "0.4.0"
uuid = { version = "0.8.2", features = ["v4"] }
sha256 = "1.5.0"
mongodb = "3.0.1"
